# libcosmic

./: Cargo.toml
cosmic-view-core/: Cargo.toml
cosmic-view-core/src/: lib.rs  syntax.rs  types.rs
cosmic-view-core/src/loaders/: fallback.rs  folder.rs  image.rs  mod.rs  pdf.rs  svg.rs  text.rs
cosmic-view-core/src/preview_api/: api.rs  details.rs  mod.rs  state.rs  types.rs
cosmic-view-core/src/util/: formatting.rs  mime.rs  mod.rs
cosmic-view-core/src/widgets/: loading_indicator.rs  mod.rs  syntax_text.rs
cosmic-view-directory/: Cargo.toml
cosmic-view-directory/src/: lib.rs
cosmic-view-fallback/: Cargo.toml
cosmic-view-fallback/src/: lib.rs
cosmic-view-image/: Cargo.toml
cosmic-view-image/src/: lib.rs
cosmic-view-text/: Cargo.toml
cosmic-view-text/src/: lib.rs
cosmic-view-types/: Cargo.toml
cosmic-view-types/src/: lib.rs
src/app/: cosmic.rs
