[package]
name = "cosmic-view-core"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Core preview/image viewing library for COSMIC desktop applications"

[features]
default = ["image", "text", "directory", "fallback"]
# Enable raster/SVG image viewer
image = ["dep:cosmic-view-image"]
# Enable text viewer with syntax highlighting
text = ["dep:cosmic-view-text"]
# Enable directory viewer
directory = ["dep:cosmic-view-directory"]
# Enable fallback viewer for unsupported files
fallback = ["dep:cosmic-view-fallback"]
# Enable PDF viewer (requires pdfium)
pdf = []
# Enable 3D model viewer (requires cosmic-view-3d crate, not yet created)
view3d = []

[dependencies]
cosmic-view-types = { path = "../cosmic-view-types" }

# Optional viewer crates
cosmic-view-image = { path = "../cosmic-view-image", optional = true }
cosmic-view-text = { path = "../cosmic-view-text", optional = true }
cosmic-view-directory = { path = "../cosmic-view-directory", optional = true }
cosmic-view-fallback = { path = "../cosmic-view-fallback", optional = true }

# Core dependencies
bytemuck = { version = "1", features = ["derive"] }
chrono = "0.4"
glam = "0.30"
tokio = { version = "1.48.0", features = ["rt", "sync"] }
tracing = "0.1.41"

# Image dependencies (for thumbnail rendering, kept even when image feature disabled)
fast_image_resize = "6.0.0"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff", "ico", "rayon"] }
jpeg-decoder = "0.3"
jxl-oxide = { version = "0.12.5", features = ["image"] }
rayon = "1.10"
resvg = "0.42"
tiny-skia = "0.11"
usvg = "0.42"

# Syntax highlighting (for thumbnail rendering)
once_cell = "1.21.3"
syntect = { version = "5.2.0", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
two-face = "0.4"
cosmic-syntax-theme = { git = "https://github.com/pop-os/cosmic-syntax-theme.git" }
cosmic-text = { git = "https://github.com/pop-os/cosmic-text.git", features = ["syntect"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"
xdg = "2.5"
xdg-mime = "0.4"

[dependencies.cosmic]
package = "libcosmic"
path = ".."
default-features = false
features = ["tokio", "wgpu"]
