[package]
name = "cosmic-view-core"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Core preview/image viewing library for COSMIC desktop applications"

[features]
default = ["image", "text", "directory", "fallback"]
# Enable raster/SVG image viewer
image = ["dep:cosmic-view-image"]
# Enable text viewer with syntax highlighting
text = ["dep:cosmic-view-text"]
# Enable directory viewer
directory = ["dep:cosmic-view-directory"]
# Enable fallback viewer for unsupported files
fallback = ["dep:cosmic-view-fallback"]
# Enable PDF viewer (requires pdfium)
pdf = []
# Enable 3D model viewer (requires cosmic-view-3d crate)
view3d = []

[dependencies]
cosmic-view-types = { path = "../cosmic-view-types" }

# Optional viewer crates
cosmic-view-image = { path = "../cosmic-view-image", optional = true }
cosmic-view-text = { path = "../cosmic-view-text", optional = true }
cosmic-view-directory = { path = "../cosmic-view-directory", optional = true }
cosmic-view-fallback = { path = "../cosmic-view-fallback", optional = true }

# Core dependencies
chrono = "0.4"
tokio = { version = "1.48.0", features = ["rt", "sync"] }
tracing = "0.1.41"

# MIME detection
[target.'cfg(target_os = "linux")'.dependencies]
xdg-mime = "0.4"

[dependencies.cosmic]
package = "libcosmic"
path = ".."
default-features = false
features = ["tokio", "wgpu"]
