[package]
name = "cosmic-view-types"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Shared types and traits for COSMIC view components"

[dependencies]
chrono = "0.4"
tracing = "0.1"

[dependencies.cosmic]
package = "libcosmic"
path = ".."
default-features = false
features = ["tokio", "wgpu"]
